k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webapp-demo
  labels:
    name: webapp-demo
    environment: development
